# game-programming-in-cpp-book

./: .clang-format  CMakeLists.txt
chapter01/: CMakeLists.txt
chapter01/src/: CMakeLists.txt  Game.h  main.cpp
cmake/: internal_utils.cmake
src/: CMakeLists.txt  ClassA.cpp  ClassA.h  ClassB.cpp  ClassB.h  Game.cpp  Game.h  class_a.cpp  class_b.cpp
test/: CMakeLists.txt  ClassATest.cpp  ClassBTest.cpp  class_a_test.cpp  class_b_test.cpp
